# winevfs

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  functions.cpp  functions.hpp  gen_functions.js  inotify.cpp  inotify.hpp  log.cpp  log.h  main.cpp  other_functions.cpp  server.cpp  server.hpp  vfs.cpp  vfs.hpp  vfs_minimal.hpp  vfs_types.hpp
